# job_notifications

./: Dockerfile  LICENSE  README.md  pyproject.toml
job_notifications/: cli.py  config.py
job_notifications/filtering/: heuristics.py
job_notifications/lifecycle/: agent.py
job_notifications/normalization/: models.py
job_notifications/notifications/: email_service.py
job_notifications/persistence/: sqlite.py
job_notifications/scrapers/: base.py  google.py  greenhouse.py  lever.py  meta.py  uber.py
job_notifications/utils/: scheduler.py
tests/: test_config.py  test_filtering.py  test_persistence.py  test_scheduler.py
