[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-notifications"
version = "0.1.0"
description = "Async job notification agent with scrapers, normalization, filtering, and notifications"
authors = [{ name = "Job Notifications" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "aiosmtplib>=3.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
playwright = ["playwright>=1.42"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "anyio>=4.0"]

[project.scripts]
job-notifications = "job_notifications.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
